--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://https://author-p35437-e1492901.adobeaemcloud.com/bin/franklin.delivery/techanubhav/test-repo/main"
+    url: "https://author-p35437-e1492901.adobeaemcloud.com/bin/franklin.delivery/techanubhav/test-repo/main"
     type: "markup"
     suffix: ".html"
